Tweak project overview. Remove mock title. Fix fab z-index. Added padding to main section.

--- a/src/app/projects/project/project.component.scss
+++ b/src/app/projects/project/project.component.scss
@@ -18,4 +18,5 @@ app-speed-dial {
   position: absolute;
   bottom: -($mat-fab-height / 2);
   right: 24px; // matches tab padding
+  z-index: 1;
 }
